fix single task popup hides behind admin popup

--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -1205,6 +1205,7 @@ div#pm-calender-page .project-select-area .form-content-wrap {
 	}
 	.popup-mask {
 		background-color: unset !important;
+		z-index: 99999 !important;
 		.popup-container .popup-body {
 			border-left: 1px solid lightgray !important;
 		}
